--- a/_posts/2017-06-28-delta-chat-0-9-2.md
+++ b/_posts/2017-06-28-delta-chat-0-9-2.md
@@ -23,6 +23,7 @@ The full list of all changes:
 * Upgrade from Autocrypt Level 0 to Level 1; as the levels are not compatible, encryption on mixed setups does not happen
 * Update Polish, Portuguese, Spanish and French translations
 
+Still missing: Multi-device setup via Autocrypt Setup Message - and probably tons of other things.
 
 As usual, the update will be available on F-Droid the next days.
 
