--- a/_posts/2017-06-28-delta-chat-0-9-2.md
+++ b/_posts/2017-06-28-delta-chat-0-9-2.md
@@ -2,7 +2,7 @@
 title: Delta Chat v0.9.2 feat. Autocrypt Level 1
 ---
 
-This version implements new **Autocrypt** encryption standard that was settled in Freiburg on the Hackathon in early June 2017. 
+This version implements the new **Autocrypt** encryption standard that was settled in Freiburg on the Hackathon in early June 2017.
 Delta Chat is proud being a part of this.
 
 For the user nothing has changed: If two Delta Chat devices are used, the end-to-end-encryption using the OpenPGP standard is enabled **automatically**.
