Change Transifex URL to a more reliable one, see https://github.com/deltachat/deltachat-android/issues/111 .

--- a/_posts/2017-07-13-delta-chat-0-9-3.md
+++ b/_posts/2017-07-13-delta-chat-0-9-3.md
@@ -17,7 +17,7 @@ Still missing: Multi-device setup via Autocrypt Setup Message - and much more.
 If you're interested in details about this, you're welcome to visit and comment our issue tracker at
 <https://github.com/deltachat/deltachat-android/issues>
 
-Our [Transifex page](https://www.transifex.com/delta-chat) also begins breathing, however, there are still maintainers and translators needed.
+Our [Transifex page](https://www.transifex.com/delta-chat/delta-chat-android/) also begins breathing, however, there are still maintainers and translators needed.
 We would also be glad for anyone adding new languages here.
 
 Last, not least: Also this homepage is translateable - our newest language is Portugues - [delta.chat/pt](https://delta.chat/pt) - Obrigado, Luis!
