Option to add author to blogposts.

--- a/_posts/2017-06-02-follow-us.md
+++ b/_posts/2017-06-02-follow-us.md
@@ -1,5 +1,6 @@
 ---
 title: Follow us via RSS or Twitter
+author: Björn Petersen
 ---
 
 Just some meta data: You can follow this news blog via **RSS** and **Twitter** now, see 
