--- a/_posts/2017-06-28-delta-chat-0-9-2.md
+++ b/_posts/2017-06-28-delta-chat-0-9-2.md
@@ -1,5 +1,6 @@
 ---
 title: Delta Chat v0.9.2 feat. Autocrypt Level 1
+author: Björn Petersen
 ---
 
 This version implements the new **Autocrypt** encryption standard that was settled in Freiburg on the Hackathon in early June 2017.
