--- a/_posts/2017-07-13-delta-chat-0-9-3.md
+++ b/_posts/2017-07-13-delta-chat-0-9-3.md
@@ -1,5 +1,6 @@
 ---
 title: Delta Chat 0.9.3, Read receipts, Portugues homepage
+author: Björn Petersen
 ---
 
 As [mentioned before](2017-07-06-read-receipts-and-social-pressure), Delta Chat 0.9.3 
