--- a/_posts/2017-08-26-delta-chat-0.9.4.md
+++ b/_posts/2017-08-26-delta-chat-0.9.4.md
@@ -1,5 +1,6 @@
 ---
 title: Delta Chat 0.9.4, Group images, Status, Fixes
+author: Björn Petersen
 ---
 
 Back from the summer break: Delta Chat 0.9.4 with new **Group images**, new **Status** functions, **Locale** updates 
