--- a/_posts/2017-10-08-delta-chat-0.9.5.md
+++ b/_posts/2017-10-08-delta-chat-0.9.5.md
@@ -1,5 +1,6 @@
 ---
 title: Delta Chat 0.9.5 - "Get your data out of there"-Release
+author: Björn Petersen
 ---
 
 Here is Delta Chat 0.9.5 with a new **backup functionality.**
@@ -27,4 +28,4 @@ BTW: Also this homepage is translateable - our newest language is Russian - [del
 
 And another thing: We are always searching for **testing devices.** 
 If you have some older, but functional, Android or iOS (!) devices in your drawer - if you do not need them any more, feel free to send them to 
-_B. Petersen, Friedrich-Ebert-Str. 1 B, 25348 Glückstadt, Germany_
+_Delta Chat, Friedrich-Ebert-Str. 1 B, 25348 Glückstadt, Germany_
