--- a/_posts/2017-10-18-delta-chat-0.9.6.md
+++ b/_posts/2017-10-18-delta-chat-0.9.6.md
@@ -1,5 +1,6 @@
 ---
 title: Delta Chat 0.9.6 - a little bugfix release
+author: Björn Petersen
 ---
 
 We've just released Delta Chat 0.9.6, a little bugfix release without new major features.
@@ -12,4 +13,4 @@ As always, the version will be available on [F-Droid](https://f-droid.org/packag
 
 BTW: We are still searching for **testing devices.** 
 If you have some older, but functional, Android or iOS (!) devices in your drawer - if you do not need them any more, feel free to send them to 
-_B. Petersen, Friedrich-Ebert-Str. 1 B, 25348 Glückstadt, Germany_
+_Delta Chat, Friedrich-Ebert-Str. 1 B, 25348 Glückstadt, Germany_
