--- a/_posts/2017-11-14-delta-chat-0.9.7-and-ios.md
+++ b/_posts/2017-11-14-delta-chat-0.9.7-and-ios.md
@@ -20,4 +20,4 @@ Of course, this will take its time, but its on the way.  I took the chance and c
 and start documenting it - [deltachat.github.io/deltachat-core/html](https://deltachat.github.io/deltachat-core/html/) - 
 which will be hopefully useful for upcoming binding to other languages and systems (yes, there are some plans :)
 
-
+EDIT: Just hours after 0.9.7 I released 0.9.8 with a [bugfix](changelog); I think the latter one will overtake the buggy one on F-Droid. Sometimes it is good that F-Droid ist not _that_ fast :)
