--- a/_posts/2017-11-29-delta-chat-0.10.0.md
+++ b/_posts/2017-11-29-delta-chat-0.10.0.md
@@ -8,7 +8,7 @@ author: Björn Petersen
 * Fix usage of multiple private keys
 * Fix various memory leaks
 * Update English, Portuguese and Turkish translations
-* start using [semantic vesion numbers](https://semver.org/) from now on
+* start using [semantic version numbers](https://semver.org/) from now on
 
 As always, the version will be available on [F-Droid](https://f-droid.org/packages/com.b44t.messenger/) soon.
 Moreover, for real experts, we've added an APK download, see below.
