--- a/_posts/2018-02-27-delta-chat-0.15.0-voice-messages.md
+++ b/_posts/2018-02-27-delta-chat-0.15.0-voice-messages.md
@@ -13,7 +13,7 @@ rendered properly. To record and send a voice message, just
 
 ![Voice messages in Delta Chat](../assets/blog/20180227-voice-messages.jpg)
 
-Further changes can be found in the [Changelog](http://deltachat.local/en/changelog)
+Further changes can be found in the [Changelog](../en/changelog)
 and, as always, it will take some days until the F-Droid version is updated.
 
 
