unify changelog url

--- a/_posts/2017-08-26-delta-chat-0.9.4.md
+++ b/_posts/2017-08-26-delta-chat-0.9.4.md
@@ -4,7 +4,7 @@ author: Björn Petersen
 ---
 
 Back from the summer break: Delta Chat 0.9.4 with new **Group images**, new **Status** functions, **Locale** updates 
-[and more](https://github.com/deltachat/deltachat-android/blob/master/CHANGELOG.md#unreleased) is out - and already
+[and more]({% include changelog-url %}) is out - and already
 available on [F-Droid](https://f-droid.org/packages/com.b44t.messenger/) just in this moment :)
 
 ![Status functionality screenshot](../assets/blog/20170826-status.png)
