--- a/_posts/2017-11-14-delta-chat-0.9.7-and-ios.md
+++ b/_posts/2017-11-14-delta-chat-0.9.7-and-ios.md
@@ -8,7 +8,7 @@ We've just released Delta Chat 0.9.7, with some new major features:
 * **Archive chats** by a long press
 * Notify the user in the chatlist about contact requests of known users or of other Delta Chat clients
 * Show messages only for explicitly wanted chats
-* [and more ...](changelog)
+* [and more ...]({% include changelog-url %})
 
 ![Archive functionality screenshot](../assets/blog/20171114-archive-chats.png)
 
