--- a/tools/translations/delta-chat-pages.downloadpo/nb_NO.po
+++ b/tools/translations/delta-chat-pages.downloadpo/nb_NO.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-23 15:09+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Allan Nordhøy <epost@anotheragency.no>, 2018\n"
 "Language-Team: Norwegian Bokmål (Norway) (https://www.transifex.com/delta-chat/teams/76181/nb_NO/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -41,16 +41,21 @@ msgid ""
 "Further variants for iOS, Mac, Linux or Windows are planned.\n"
 "You can actively [support](contribute) us in the development."
 msgstr ""
+"En Androidversjon i beta-tilstand er tilgjengelig på F-Droid. Etter [versjon 1.0-milepælen] (https://github.com/deltachat/deltachat-android/milestone/1) vil tilgjengelighet på i Google Play-butikken følge.\n"
+"Videre varianter for iOS, macOS, Linux|GNU og Windows er planlagt.\n"
+"Du kan aktivt [støtte](contribute) oss i utviklingen."
 
 #: ../en/download.md:15
 msgid "## Android (Beta)"
-msgstr ""
+msgstr "## Android (Beta)"
 
 #: ../en/download.md:17
 msgid ""
 "[<img src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)\n"
 "<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 msgstr ""
+"[<img src=\"../assets/home/get-it-on-fdroid.png\" alt=\"Get it on F-Droid\" width=\"200\" />](https://f-droid.org/app/com.b44t.messenger)\n"
+"<img src=\"../assets/home/get-it-on-gplay.png\" alt=\"Get it on Google Play\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 
 #: ../en/download.md:20
 msgid ""
@@ -61,17 +66,19 @@ msgstr ""
 
 #: ../en/download.md:25
 msgid "## Apple"
-msgstr ""
+msgstr "## Apple"
 
 #: ../en/download.md:27
 msgid ""
 "<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Download on Apple "
 "AppStore\" width=\"200\" style=\"filter: opacity(.3) grayscale(100%);\" />"
 msgstr ""
+"<img src=\"../assets/home/get-it-on-ios.png\" alt=\"Last ned på Apple "
+"AppStore\" width=\"200\" style=\"filter\\: opacity(.3) grayscale(100%);\" />"
 
 #: ../en/download.md:29
 msgid "## Linux"
-msgstr ""
+msgstr "## Linux|GNU"
 
 #: ../en/download.md:31
 msgid ""
@@ -81,4 +88,4 @@ msgstr ""
 
 #: ../en/download.md:34
 msgid "## Windows"
-msgstr ""
+msgstr "## Windows"
