--- a/tools/translations/delta-chat-pages.indexpo/nb_NO.po
+++ b/tools/translations/delta-chat-pages.indexpo/nb_NO.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-23 15:09+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Allan Nordhøy <epost@anotheragency.no>, 2018\n"
 "Language-Team: Norwegian Bokmål (Norway) (https://www.transifex.com/delta-chat/teams/76181/nb_NO/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -37,6 +37,9 @@ msgid ""
 "The messenger with the **broadest audience** in the world.  \n"
 "**Free**, **independent**, email compatible."
 msgstr ""
+"# Delta Chat\n"
+"Meldingstjenesten med **størst rekkevidde** i verden.\n"
+"**Gratis**, **uavhengig**. e-postkompatibel."
 
 #: ../en/index.md:13
 msgctxt "../en/index.md:13"
