--- a/tools/translations/delta-chat-pages.downloadpo/nb_NO.po
+++ b/tools/translations/delta-chat-pages.downloadpo/nb_NO.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-23 15:09+0200\n"
+"POT-Creation-Date: 2018-03-26 11:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Allan Nordhøy <epost@anotheragency.no>, 2018\n"
 "Language-Team: Norwegian Bokmål (Norway) (https://www.transifex.com/delta-chat/teams/76181/nb_NO/)\n"
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "---\n"
 "title: Last ned\n"
-"layout: default-no\n"
+"layout: default-nb\n"
 "---"
 
 #: ../en/download.md:6
@@ -41,7 +41,7 @@ msgid ""
 "Further variants for iOS, Mac, Linux or Windows are planned.\n"
 "You can actively [support](contribute) us in the development."
 msgstr ""
-"En Androidversjon i beta-tilstand er tilgjengelig på F-Droid. Etter [versjon 1.0-milepælen] (https://github.com/deltachat/deltachat-android/milestone/1) vil tilgjengelighet på i Google Play-butikken følge.\n"
+"En Androidversjon i beta-tilstand er tilgjengelig på F-Droid. Etter [versjon 1.0-milepælen](https://github.com/deltachat/deltachat-android/milestone/1) vil tilgjengelighet på i Google Play-butikken følge.\n"
 "Videre varianter for iOS, macOS, Linux|GNU og Windows er planlagt.\n"
 "Du kan aktivt [støtte](contribute) oss i utviklingen."
 
