--- a/tools/translations/delta-chat-pages.helppo/it.po
+++ b/tools/translations/delta-chat-pages.helppo/it.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-23 15:09+0200\n"
+"POT-Creation-Date: 2018-03-26 11:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
 "Language-Team: Italian (https://www.transifex.com/delta-chat/teams/76181/it/)\n"
@@ -101,8 +101,8 @@ msgstr ""
 "- È completamente _open source_ e basta sugli _standard_"
 
 #: ../en/help.md:35
-msgid "## What, if the receiver does not use Delta Chat?"
-msgstr "## Cosa accade se il destinatario non utilizza Delta Chat?"
+msgid "## What if the receiver does not use Delta Chat?"
+msgstr ""
 
 #: ../en/help.md:37
 msgid ""
@@ -324,8 +324,8 @@ msgstr ""
 "- Per il _transport encryption_, questo stato viene mostrato direttamente nel profilo"
 
 #: ../en/help.md:118
-msgid "## Which standards are used for end-to-end-encryption."
-msgstr "## Quali standard sono usati per la cifratura end-to-end."
+msgid "## Which standards are used for end-to-end-encryption?"
+msgstr ""
 
 #: ../en/help.md:120
 msgid ""
@@ -440,7 +440,7 @@ msgstr ""
 #: ../en/help.md:157
 msgid ""
 "- Instead of installing Delta Chat directly via APK file, you can first "
-"install the F-Froid store via [F-Droid-apk](https://f-droid.org/FDroid.apk) "
+"install the F-Droid store via [F-Droid-APK](https://f-droid.org/FDroid.apk) "
 "and then install Delta Chat using the store. The great benefit is the "
 "information about updates and the migration of existing config and chat "
 "data."
