--- a/tools/translations/delta-chat-pages.helppo/nb_NO.po
+++ b/tools/translations/delta-chat-pages.helppo/nb_NO.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-23 15:09+0200\n"
+"POT-Creation-Date: 2018-03-26 11:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Allan Nordhøy <epost@anotheragency.no>, 2018\n"
 "Language-Team: Norwegian Bokmål (Norway) (https://www.transifex.com/delta-chat/teams/76181/nb_NO/)\n"
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "---\n"
 "title: Hjelp\n"
-"layout: default-no\n"
+"layout: default-nb\n"
 "---"
 
 #: ../en/help.md:6
@@ -84,8 +84,8 @@ msgid ""
 msgstr ""
 
 #: ../en/help.md:35
-msgid "## What, if the receiver does not use Delta Chat?"
-msgstr "##Hva om mottakeren ikke bruker Delta Chat?"
+msgid "## What if the receiver does not use Delta Chat?"
+msgstr ""
 
 #: ../en/help.md:37
 msgid ""
@@ -269,8 +269,8 @@ msgid ""
 msgstr ""
 
 #: ../en/help.md:118
-msgid "## Which standards are used for end-to-end-encryption."
-msgstr "## Hvilke standarder brukes for ende-til-ende-kryptering?"
+msgid "## Which standards are used for end-to-end-encryption?"
+msgstr ""
 
 #: ../en/help.md:120
 msgid ""
@@ -368,16 +368,11 @@ msgstr ""
 #: ../en/help.md:157
 msgid ""
 "- Instead of installing Delta Chat directly via APK file, you can first "
-"install the F-Froid store via [F-Droid-apk](https://f-droid.org/FDroid.apk) "
+"install the F-Droid store via [F-Droid-APK](https://f-droid.org/FDroid.apk) "
 "and then install Delta Chat using the store. The great benefit is the "
 "information about updates and the migration of existing config and chat "
 "data."
 msgstr ""
-"- I stedet for å installere Delta Chat direkte fra APK-fil, kan du først "
-"installere F-Droid-butikken via [F-Droid-"
-"APK](https://f-droid.org/FDroid.apk) og så installere Delta Chat Derfra. Den"
-" store fordelen er at informasjonen om oppdateringer og flytting av "
-"eksisterende oppsett og sludredata."
 
 #: ../en/help.md:160
 msgid "## Login Issues"
