--- a/tools/translations/delta-chat-pages.blogpo/nb_NO.po
+++ b/tools/translations/delta-chat-pages.blogpo/nb_NO.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-23 15:09+0200\n"
+"POT-Creation-Date: 2018-03-26 11:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
 "Language-Team: Norwegian Bokmål (Norway) (https://www.transifex.com/delta-chat/teams/76181/nb_NO/)\n"
@@ -24,7 +24,7 @@ msgid ""
 msgstr ""
 "---\n"
 "title: Blogg\n"
-"layout: default-no\n"
+"layout: default-nb\n"
 "---"
 
 #: ../en/blog.md:6
