--- a/tools/translations/delta-chat-pages.contributepo/nb_NO.po
+++ b/tools/translations/delta-chat-pages.contributepo/nb_NO.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-23 15:09+0200\n"
+"POT-Creation-Date: 2018-03-26 11:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Allan Nordhøy <epost@anotheragency.no>, 2018\n"
 "Language-Team: Norwegian Bokmål (Norway) (https://www.transifex.com/delta-chat/teams/76181/nb_NO/)\n"
@@ -22,8 +22,9 @@ msgid ""
 "layout: default-en\n"
 "---"
 msgstr ""
+"---\n"
 "title: Bidra\n"
-"layout: default-no\n"
+"layout: default-nb\n"
 "---"
 
 #: ../en/contribute.md:6
