--- a/tools/translations/delta-chat-pages.helppo/de.po
+++ b/tools/translations/delta-chat-pages.helppo/de.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-03-23 15:09+0200\n"
+"POT-Creation-Date: 2018-03-26 11:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
@@ -98,7 +98,7 @@ msgstr ""
 "- fully _Open Source_ and _Standards_ based"
 
 #: ../en/help.md:35
-msgid "## What, if the receiver does not use Delta Chat?"
+msgid "## What if the receiver does not use Delta Chat?"
 msgstr "## Was, wenn der Empfänger kein Delta Chat verwendet?"
 
 #: ../en/help.md:37
@@ -312,7 +312,7 @@ msgstr ""
 "- bei einer Transportverschlüsselung wird dieser Status hier angezeigt."
 
 #: ../en/help.md:118
-msgid "## Which standards are used for end-to-end-encryption."
+msgid "## Which standards are used for end-to-end-encryption?"
 msgstr ""
 "## Welches Verfahren wird für die Ende-zu-Ende-Verschlüsselung verwendet?"
 
@@ -436,16 +436,16 @@ msgstr ""
 #: ../en/help.md:157
 msgid ""
 "- Instead of installing Delta Chat directly via APK file, you can first "
-"install the F-Froid store via [F-Droid-apk](https://f-droid.org/FDroid.apk) "
+"install the F-Droid store via [F-Droid-APK](https://f-droid.org/FDroid.apk) "
 "and then install Delta Chat using the store. The great benefit is the "
 "information about updates and the migration of existing config and chat "
 "data."
 msgstr ""
-"- Alternativ kann man natürlich erst die [F-Droid-"
-"apk](https://f-droid.org/FDroid.apk) an Stelle der Delta Chat apk Datei "
-"installieren und dann darüber Delta Chat. Das hat den Vorteil, dass im Falle"
-" eines Updates dieses über die Paketverwaltung erfolgt und die "
-"Konfigurations- und Chat-Daten bestehen bleiben."
+"- Alternativ kann man erst die [F-Droid-apk](https://f-droid.org/FDroid.apk)"
+" an Stelle der Delta Chat APK Datei installieren und dann darüber Delta "
+"Chat. Das hat den Vorteil, dass im Falle eines Updates dieses über die "
+"Paketverwaltung erfolgt und die Konfigurations- und Chat-Daten bestehen "
+"bleiben."
 
 #: ../en/help.md:160
 msgid "## Login Issues"
