--- a/pl/contribute.po
+++ b/pl/contribute.po
@@ -36,8 +36,8 @@ msgid ""
 "Delta Chat is open source and free of charge. You can contribute in many "
 "ways to bring the development further!"
 msgstr ""
-"Czat Delta jest otwarto-źródłowy i bezpłatny. Możesz przyczynić się do "
-"dalszego jego rozwoju na wiele sposobów!"
+"Delta Chat jest otwarto-źródłowy i bezpłatny. Możesz przyczynić się do jego "
+"dalszego rozwoju na wiele sposobów!"
 
 #: ../en/contribute.md:11
 msgid "# Channels"
@@ -53,9 +53,9 @@ msgid ""
 "- Collaborate through the [Github Delta Chat repositories](https://github.com/deltachat/)\n"
 "- Join IRC channel **#deltachat** on [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
 msgstr ""
-"- Aby porozmawiać o społeczności dołącz do listy mailingowej [Delta Chat](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/)\n"
-"- Współpracuj za pośrednictwem [repozytoriów Github Delta Chat](https://github.com/deltachat/)\n"
-"- Dołącz do kanału IRC **#deltachat** na [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
+"- dołączyć do listy mailingowej aby porozmawiać o społeczności [Delta Chat](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/)\n"
+"- współpracować za pośrednictwem [repozytoriów Github Delta Chat](https://github.com/deltachat/)\n"
+"- dołączyć do kanału IRC **#deltachat** na [Freenode](https://webchat.freenode.net?uio=MTE9MjA16a&channels=%23deltachat)"
 
 #: ../en/contribute.md:20
 msgid "# Donate"
@@ -119,8 +119,8 @@ msgid ""
 "Edit your own [Delta Chat](https://github.com/deltachat/) fork and send a pull request."
 msgstr ""
 "Poszukujemy programistów open source, którzy znają C, Java, Android, iOS, "
-"Windows, Linux lub Mac. Stwórz swoją własną modyfikację Delta Chat i wyślij "
-"prośbę ściągnięcia."
+"Windows, Linux lub Mac. Stwórz swoją własną modyfikację [Delta "
+"Chat](https://github.com/deltachat/) i wyślij prośbę o pobranie."
 
 #: ../en/contribute.md:45
 msgid ""
@@ -129,10 +129,14 @@ msgid ""
 "[here](https://github.com/deltachat/deltachat-pages) and send us a pull "
 "request."
 msgstr ""
+"To samo dotyczy **tej strony** - bez względu na to, czy masz większe czy "
+"mniejsze udoskonalenia: łatwo wyedytujesz tę stronę "
+"[tutaj](https://github.com/deltachat/deltachat-pages) i wyślij nam prośbę o "
+"pobranie."
 
 #: ../en/contribute.md:47
 msgid "# Recommendation"
-msgstr ""
+msgstr "# Polecaj nas"
 
 #: ../en/contribute.md:49
 msgid ""
@@ -141,14 +145,19 @@ msgid ""
 "With Version 1.0 Delta Chat will become market-ready and a recommendation "
 "for _everyone_. "
 msgstr ""
+"Obecnie Delta Chat jest nadal w fazie beta i nie jest odpowiedni dla "
+"początkujących użytkowników. Ludzie używający go dzisiaj powinni uważać, "
+"ponieważ rzeczy się zmieniają. W wersji 1.0, Delta Chat stanie się gotowy do"
+" wprowadzenia na rynek i polecania _wszystkim_."
 
 #: ../en/contribute.md:52
 msgid "# Bug Reports"
-msgstr ""
+msgstr "# Zgłaszanie błędów"
 
 #: ../en/contribute.md:54
 msgid "Use the following **Issue Trackers** to report bugs."
 msgstr ""
+"Aby zgłosić błędy użyj następujących modułów do **śledzenia problemów**."
 
 #: ../en/contribute.md:56
 msgid ""
@@ -156,3 +165,6 @@ msgid ""
 "- [Delta Chat iOS](https://github.com/deltachat/deltachat-ios/issues)\n"
 "- [Core Library + Python](https://github.com/deltachat/deltachat-core/issues)"
 msgstr ""
+"- [Delta Chat Android](https://github.com/deltachat/deltachat-android/issues)\n"
+"- [Delta Chat iOS](https://github.com/deltachat/deltachat-ios/issues)\n"
+"- [Biblioteka główna + Python](https://github.com/deltachat/deltachat-core/issues)"
