--- a/nb/features.po
+++ b/nb/features.po
@@ -77,3 +77,6 @@ msgid ""
 "chatting better](https://delta.chat/en/2017-05-31-delta-makes-chatting-"
 "better)."
 msgstr ""
+"Ytterligere grunnlag og motivasjon er å finne i denne bloggposten [Delta "
+"Chat gjør sludring bedre](https://delta.chat/en/2017-05-31-delta-makes-"
+"chatting-better)."
