--- a/nb/contribute.po
+++ b/nb/contribute.po
@@ -66,6 +66,8 @@ msgid ""
 "Delta Chat development costs **money**. Your donation will support future "
 "improvements directly."
 msgstr ""
+"Utviklingen av Delta Chat koster **penger**. Din donasjon støtter videre "
+"forbedring direkte."
 
 #: ../en/contribute.md:24
 msgid ""
@@ -73,12 +75,17 @@ msgid ""
 "- PayPal or credit card: [paypal.me/deltachat](https://paypal.me/deltachat/20)\n"
 "- Send bitcoins to [18e3zwis2raitdZVhEhHHT7xG6oXsZte9L](bitcoin:18e3zwis2raitdZVhEhHHT7xG6oXsZte9L)"
 msgstr ""
+"- IBAN DE86100777770428658900, BIC NORSDE51XXX\n"
+"- PayPal eller betalingskort: [paypal.me/deltachat](https://paypal.me/deltachat/20)\n"
+"- Send bitcoin til [18e3zwis2raitdZVhEhHHT7xG6oXsZte9L](bitcoin:18e3zwis2raitdZVhEhHHT7xG6oXsZte9L)"
 
 #: ../en/contribute.md:28
 msgid ""
 "We need **devices** for test purposes. Do you have any disused Android Smartphone or iPhone?\n"
 "[We](imprint)'d love to take it!"
 msgstr ""
+"Vi trenger **enheter** i testøyemed. Har du en iPhone eller Android-telefon du ikke bruker?\n"
+"[Vi](imprint) tar imot med åpne armer!"
 
 #: ../en/contribute.md:31
 msgid "# Translation"
@@ -111,6 +118,8 @@ msgid ""
 "We are looking for open source developers who are familiar with C, Java, Android, iOS, Windows, Linux or Mac.\n"
 "Edit your own [Delta Chat](https://github.com/deltachat/) fork and send a pull request."
 msgstr ""
+"Vi leter etter friprog-utviklere som kjenner C, Java, Android, iOS, Windows, Linux|GNU eller Mac.\n"
+"Ta grep om din egen [Delta Chat](https://github.com/deltachat/) forgrening, og send inn en innlemmingsforespørsel."
 
 #: ../en/contribute.md:45
 msgid ""
@@ -119,6 +128,9 @@ msgid ""
 "[here](https://github.com/deltachat/deltachat-pages) and send us a pull "
 "request."
 msgstr ""
+"Det samme er å anse for **denne nettsiden** - Uansett om du har små eller "
+"store forbedringer: Rediger denne siden [her](https://github.com/deltachat"
+"/deltachat-pages) og send innlemmingsforespørsel."
 
 #: ../en/contribute.md:47
 msgid "# Recommendation"
