--- a/nb/imprint.po
+++ b/nb/imprint.po
@@ -6,7 +6,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-03-26 21:10+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Allan Nordhøy <epost@anotheragency.no>, 2018\n"
 "Language-Team: Norwegian Bokmål (Norway) (https://www.transifex.com/delta-chat/teams/76181/nb_NO/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,6 +38,10 @@ msgid ""
 "Friedrich-Ebert-Str. 1 B  \n"
 "25348 Glückstadt, Germany"
 msgstr ""
+"Delta Chat  \n"
+"c/o Björn Petersen  \n"
+"Friedrich-Ebert-Str. 1 B  \n"
+"25348 Glückstadt, Tyskland"
 
 #: ../en/imprint.md:13
 msgid ""
@@ -45,13 +49,17 @@ msgid ""
 "Phone: +49 4124 603889  \n"
 "USt-IdNr. DE214707533"
 msgstr ""
+"E-post: {% include email-link %}  \n"
+"Telefon: +49 4124 603889  \n"
+"USt-IdNr. DE214707533"
 
 #: ../en/imprint.md:17
 msgid "[Community channels](contribute)"
-msgstr ""
+msgstr "[Gemenskapskanaler](contribute)"
 
 #: ../en/imprint.md:19
 msgid ""
 "The mailing list server is operated through "
 "<https://github.com/codespeaknet/sysadmin>."
 msgstr ""
+"E-postlisten blir traktert med <https://github.com/codespeaknet/sysadmin>."
